# seal

./: .gitignore  .licensesnip  .pre-commit-config-example.yaml  CONTRIBUTING.md  Cargo.toml  Design.md  DevFAQ.md  Dockerfile  Pricing.md  README.md  SecurityBestPractices.md  TermsOfService.md  UsingSeal.md  deny.toml  mkdocs.yml  ws-resources.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: code-bug.md  doc-bug.md
.github/workflows/: docs-deploy.yml  integration.yml  move.yml  node.yml  rust.yml  typescript.yml
crates/crypto/: Cargo.toml
crates/crypto/src/: dem.rs  elgamal.rs  gf256.rs  ibe.rs  lib.rs  polynomial.rs  prefixed_hex.rs  tss.rs  utils.rs
crates/dkg-cli/: Cargo.toml  README.md
crates/dkg-cli/src/: main.rs
crates/key-server/: Cargo.toml  key-server-config.yaml
crates/key-server/src/: cache.rs  errors.rs  externals.rs  key_server_options.rs  lib.rs  master_keys.rs  metrics.rs  metrics_push.rs  mvr.rs  periodic_updater.rs  server.rs  signed_message.rs  sui_rpc_client.rs  time.rs  types.rs  utils.rs  valid_ptb.rs
crates/key-server/src/tests/: e2e.rs  externals.rs  mod.rs  pd.rs  server.rs  tle.rs  whitelist.rs
crates/key-server/src/tests/whitelist_v1/: Move.toml
crates/key-server/src/tests/whitelist_v1/sources/: whitelist_v1.move
crates/key-server/src/tests/whitelist_v2/: Move.toml
crates/key-server/src/tests/whitelist_v2/sources/: whitelist_v2.move
crates/seal-cli/: Cargo.toml
crates/seal-cli/src/: main.rs
crates/seal-proxy/: Cargo.toml  README.md
crates/seal-proxy/src/: admin.rs  config.rs  consumer.rs  handlers.rs  histogram_relay.rs  lib.rs  main.rs  metrics.rs  middleware.rs  prom_to_mimir.rs  providers.rs  remote_write.rs
crates/seal-proxy/src/providers/: seal.rs
crates/seal-proxy/src/providers/seal/: provider.rs
crates/seal-sdk/: Cargo.toml
crates/seal-sdk/src/: lib.rs  types.rs
docker/seal-proxy/: Dockerfile
docker/seal-proxy/local-test/: bearer-tokens.yaml  config.alloy  docker-compose.yml  mimir.yaml  seal-proxy.yaml
docker/seal-proxy/local-test/dashboard/: dashboard.json  datasources.yaml
docker/seal-proxy/local-test/metrics-generator/: Cargo.toml  Dockerfile
docker/seal-proxy/local-test/metrics-generator/src/: main.rs  metrics_push.rs
docs/: BetaTermsOfService.md  Design.md  ExamplePatterns.md  GettingStarted.md  KeyServerOps.md  Pricing.md  SealCLI.md  SecurityBestPractices.md  TermsOfService.md  UsingSeal.md  index.md
examples/: .gitignore  README.md
examples/frontend/: .eslintrc.cjs  .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts
examples/frontend/src/: AllAllowlist.tsx  AllServices.tsx  Allowlist.tsx  AllowlistView.tsx  App.tsx  CreateAllowlist.tsx  CreateService.tsx  CreateSubscriptionService.tsx  EncryptAndUpload.tsx  Feeds.tsx  FeedsToSubscribe.tsx  OwnedAllowlists.tsx  OwnedSubscriptionServices.tsx  Service.tsx  SubscriptionService.tsx  SubscriptionView.tsx  WalrusUpload.tsx  constants.ts  decryption.ts  index.html  main.tsx  networkConfig.ts  utils.ts
examples/move/: Move.toml
examples/move/sources/: allowlist.move  subscription.move  utils.move
move/: .prettierrc
move/committee/: Move.toml
move/committee/sources/: committee.move
move/immutable/: Move.toml
move/immutable/sources/: registry.move  wrapper.move
move/patterns/: Move.toml
move/patterns/sources/: account_based.move  key_request.move  private_data.move  subscription.move  tle.move  voting.move  whitelist.move
move/seal/: Move.toml  README.md
move/seal/sources/: bf_hmac_encryption.move  gf256.move  hmac256ctr.move  kdf.move  key_server.move  polynomial.move
scripts/: changed-files.sh  get_current_version.sh  license_check.sh
tests/: README.md  package.json  pnpm-lock.yaml  simple-seal-server.test.ts
