[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.4.4"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", features = ["aes"] }
bcs = "0.1.6"
serde = "1.0.210"
serde_json = "1.0.138"
itertools = { version = "0.14.0" }
anyhow = "1.0"
rand = "0.8.5"
hex = "0.4"
clap = { version = "4.5.40", features = ["derive"] }
tracing = "0.1.37"
serde_with = "3.13.0"

# Sui dependencies
sui_types = { git = "https://github.com/mystenlabs/sui", rev = "42ba6c0", package = "sui-types"}
mysten-service = { git = "https://github.com/mystenlabs/sui", rev = "42ba6c0", package = "mysten-service" }
sui_sdk = { git = "https://github.com/mystenlabs/sui", rev = "42ba6c0", package = "sui-sdk"}
shared_crypto = { git = "https://github.com/MystenLabs/sui", rev = "42ba6c0", package = "shared-crypto" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "42ba6c0" }

[profile.release]
panic = 'abort'
