[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.5.10"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4de96284fd75dcb7757f567602906f0d3366c795", features = ["aes"] }
bcs = "0.1.6"
serde = "1.0.210"
serde_json = "1.0.138"
itertools = { version = "0.14.0" }
anyhow = "1.0"
rand = "0.8.5"
hex = "0.4"
clap = { version = "4.5.40", features = ["derive"] }
tracing = "0.1.37"
serde_with = "3.13.0"

# Sui dependencies
sui_types = { git = "https://github.com/mystenlabs/sui", rev = "2cdbb8351f68db3970ffde966b0b9c11694a7969", package = "sui-types"}
mysten-service = { git = "https://github.com/mystenlabs/sui", rev = "2cdbb8351f68db3970ffde966b0b9c11694a7969" }
sui_sdk = { git = "https://github.com/mystenlabs/sui", rev = "2cdbb8351f68db3970ffde966b0b9c11694a7969", package = "sui-sdk"}
shared_crypto = { git = "https://github.com/MystenLabs/sui", rev = "2cdbb8351f68db3970ffde966b0b9c11694a7969", package = "shared-crypto" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "2cdbb8351f68db3970ffde966b0b9c11694a7969" }

# this matches the sdk version used by mvr-types dep: https://github.com/MystenLabs/mvr
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = ["serde"], rev = "86a9e06" }

[profile.release]
panic = 'abort'
