[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.5.11"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b", features = ["aes"] }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "d1fcb853196c3de7888ed8fad74f419b8c8fbe3b" }
bcs = "0.1.6"
serde = "1.0.210"
serde_json = "1.0.138"
itertools = { version = "0.14.0" }
anyhow = "1.0"
rand = "0.8.5"
hex = "0.4"
clap = { version = "4.5.40", features = ["derive"] }
tracing = "0.1.37"
serde_with = "3.13.0"

# Sui dependencies
sui_types = { git = "https://github.com/mystenlabs/sui", rev = "22642cf", package = "sui-types"}
mysten-service = { git = "https://github.com/mystenlabs/sui", rev = "22642cf" }
sui_sdk = { git = "https://github.com/mystenlabs/sui", rev = "22642cf", package = "sui-sdk"}
shared_crypto = { git = "https://github.com/MystenLabs/sui", rev = "22642cf", package = "shared-crypto" }
move-core-types = { git = "https://github.com/MystenLabs/sui.git", rev = "22642cf" }
prometheus_closure_metric = { git = "https://github.com/MystenLabs/sui", rev = "22642cf", package = "prometheus-closure-metric" }
sui-move-build = { git = "https://github.com/mystenlabs/sui", rev = "22642cf", package = "sui-move-build" }
test-cluster = { git = "https://github.com/mystenlabs/sui", rev = "22642cf", package = "test-cluster" }

# this matches the sdk version used by mvr-types dep: https://github.com/MystenLabs/mvr
sui-sdk-types = { git = "https://github.com/mystenlabs/sui-rust-sdk", features = ["serde"], rev = "86a9e06" }
sui-transaction-builder = { git = "https://github.com/mystenlabs/sui-rust-sdk", rev = "86a9e06" }

[profile.release]
panic = 'abort'
