[package]
name = "dkg-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4de96284fd75dcb7757f567602906f0d3366c795", features = ["aes"] }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4de96284fd75dcb7757f567602906f0d3366c795" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
bcs.workspace = true
rand.workspace = true
hex.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
base64 = "0.21"
dirs = "5.0"

[[bin]]
name = "dkg-cli"
path = "src/main.rs"