[package]
name = "key-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "key-server"
path = "src/server.rs"

[dependencies]
fastcrypto.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
bcs.workspace = true
tracing.workspace = true
sui_types.workspace = true
mysten-service.workspace = true
sui_sdk.workspace = true
shared_crypto.workspace = true
move-core-types.workspace = true
mvr_types = { git = "https://github.com/MystenLabs/mvr", rev = "1993d7188f62564b05f0ccab46bbfb24b0eea326", package = "mvr-types" }

tokio = { version = "1.46.1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["cors", "limit"] }
crypto = { path = "../crypto" }
tap = "1.0.1"
prometheus = "0.13.3"
anyhow = "1.0.79"
once_cell = "1.20.2"
chrono = "0.4.39"
semver = { version = "1.0.26", features = ["serde"] }
jsonrpsee = "0.24.0"
serde_yaml = "0.9"
duration-str = "0.17.0"
git-version = "0.3.9"
moka = { version = "0.12.10", features = ["sync"] }
snap = "1.1.0"
reqwest = { version = "0.12", features = ["json"] }
serde_with = { workspace = true, features = ["base64"] }
hostname = "0.4"

move-binding-derive = { git = "https://github.com/MystenLabs/move-binding.git", rev = "99f68a28c2f19be40a09e5f1281af748df9a8d3e" }
move-types = { git = "https://github.com/MystenLabs/move-binding.git", rev = "99f68a28c2f19be40a09e5f1281af748df9a8d3e" }
sui-sdk-types = { workspace = true }
sui-transaction-builder = { workspace = true }
prometheus_closure_metric = { workspace = true }
hyper-util = "0.1.10"
http-body-util = "0.1.2"
futures = "0.3"
seal-sdk = { path = "../seal-sdk" }

[dev-dependencies]
tracing-test = "0.2.5"
test-cluster = { workspace = true }
sui-move-build = { workspace = true }
temp-env = { version = "0.3", features = ["async_closure"] }
