[package]
name = "metrics-generator"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt"] }
anyhow = "1.0"
chrono = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tokio-util = "0.7.13"
prometheus = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snap = "1.1.0"
base64 = "0.22.1"
uuid = { version = "1.17.0", features = ["fast-rng", "macro-diagnostics", "v7"] }
mysten-metrics = { git = "https://github.com/MystenLabs/sui", tag = "testnet-v1.52.1" }